--- a/index.html
+++ b/index.html
@@ -1,38 +1,37 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LinMen</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
 
-<div class="MaxWidth my-5">
-    <div class="d-flex justify-content-start">
-
-        <div class="SelectFormOne mr-4 SelectFormField">
-            <div class="SelectFormHeder">
-                <p class="px-3 py-4">Izvēlieties vai aizpildiet norādītos laukus</p>
+    <div class="PageContainer MaxWidth w-100 pt-4 d-flex flex-wrap justify-content-start">
+        <div class="FormHalf order-2 order-md-1">
+            <div class="FormHeader">
+                <p class="px-4 py-4 mb-0">Izvēlieties vai aizpildiet norādītos laukus</p>
             </div>
 
-            <div class="px-3">
+            <div class="FormSection px-4 py-3">
                 <p><b>Krekla siluets</b></p>
 
                 <input type="checkbox" id="1" name="group1[]"/>
                 <label for="1">
-                <div class="choices">Krekla siluets</div>
+                <div class="choices">Pieguļošs</div>
                 </label>
 
                 <input type="checkbox" id="2" name="group1[]"/>
                 <label for="2">
-                <div class="choices">Btīvs</div>
+                <div class="choices">Brīvs</div>
                 </label>
-
             </div>
 
-            <div class="Line my-4"></div>
-
-            <div class="px-3">
-                <p><b>Pieddurknes</b></p>
+            <div class="FormSection px-4 py-3">
+                <p><b>Piedurknes</b></p>
 
                 <input type="checkbox" id="3" name="group2[]"/>
                 <label for="3">
@@ -48,21 +47,10 @@
                 <label for="5">
                 <div class="choices" onclick="check3()">Īsās</div>
                 </label>
-
             </div>
 
-
-
-
-
-
-
-
-
             <div class="Hidden">
-                <div class="Line my-4"></div>
-
-                <div class="px-3">
+                <div class="FormSection px-4 py-3">
                     <p><b>Garās</b></p>
 
                     <input type="checkbox" id="41" name="group41[]"/>
@@ -74,15 +62,11 @@
                     <label for="42">
                     <div class="choices" onclick="check5()">Klasiskas</div>
                     </label>
-
                 </div>
             </div>
 
-
             <div class="Hidden Hidden2">
-                <div class="Line my-4"></div>
-
-                <div class="px-3">
+                <div class="FormSection px-4 py-3">
                     <p><b>Ar manžetēm</b></p>
 
                     <input type="checkbox" id="43" name="group33[]"/>
@@ -94,15 +78,11 @@
                     <label for="44">
                     <div class="choices" onclick="check7()">Ar detaļu</div>
                     </label>
-
                 </div>
             </div>
 
-
             <div class="Hidden Hidden3">
-                <div class="Line my-4"></div>
-
-                <div class="px-3">
+                <div class="FormSection px-4 py-3">
                     <p><b>Pusgarās</b></p>
 
                     <input type="checkbox" id="45" name="group34[]"/>
@@ -114,15 +94,11 @@
                     <label for="46">
                     <div class="choices" onclick="check7()">Ar pogājumu</div>
                     </label>
-
                 </div>
             </div>
 
-
             <div class="Hidden Hidden4">
-                <div class="Line my-4"></div>
-
-                <div class="px-3">
+                <div class="FormSection px-4 py-3">
                     <p><b>Īsās</b></p>
 
                     <input type="checkbox" id="47" name="group34[]"/>
@@ -134,15 +110,11 @@
                     <label for="48">
                     <div class="choices" onclick="check11()">Ar atloku</div>
                     </label>
-
                 </div>
             </div>
 
-
             <div class="Hidden Hidden5">
-                <div class="Line my-4"></div>
-
-                <div class="px-3">
+                <div class="FormSection px-4 py-3">
                     <p><b>Ar atloku</b></p>
 
                     <input type="checkbox" id="49" name="group[]"/>
@@ -154,18 +126,10 @@
                     <label for="50">
                     <div class="choices" onclick="check11()">Bez pogas</div>
                     </label>
-
                 </div>
             </div>
 
-
-
-
-
-
-            <div class="Line my-4"></div>
-
-            <div class="px-3">
+            <div class="FormSection px-4 py-3">
                 <p><b>Apkakle</b></p>
 
                 <input type="checkbox" id="6" name="group3[]"/>
@@ -182,12 +146,9 @@
                 <label for="8">
                 <div class="choices">Ar izgriezumu</div>
                 </label>
-
             </div>
 
-            <div class="Line my-4"></div>
-
-            <div class="px-3">
+            <div class="FormSection px-4 py-3">
                 <p><b>Apakšmala</b></p>
 
                 <input type="checkbox" id="9" name="group4[]"/>
@@ -199,12 +160,9 @@
                 <label for="10">
                 <div class="choices">Izliekta</div>
                 </label>
-
             </div>
 
-            <div class="Line my-4"></div>
-
-            <div class="px-3">
+            <div class="FormSection px-4 py-3">
                 <p><b>Kabatas</b></p>
 
                 <input type="checkbox" id="11" name="group5[]"/>
@@ -216,12 +174,9 @@
                 <label for="12">
                 <div class="choices">Ar kabatām</div>
                 </label>
-
             </div>
 
-            <div class="Line my-4"></div>
-
-            <div class="px-3">
+            <div class="FormSection px-4 py-3">
                 <p><b>Standarta izmērs</b></p>
 
                 <input type="checkbox" id="13" name="group6[]"/>
@@ -263,12 +218,9 @@
                 <label for="20">
                 <div class="choices">Cits</div>
                 </label>
-
             </div>
 
-            <div class="Line my-4"></div>
-
-            <div class="px-3">
+            <div class="FormSection px-4 py-3">
                 <p><b>Individuāls izmērs</b></p>
 
                 <input type="checkbox" id="21" name="group7[]"/>
@@ -285,12 +237,9 @@
                 <label for="23">
                 <div class="choices">Kakla apkārtmērs</div>
                 </label>
-
             </div>
 
-            <div class="Line my-4"></div>
-
-            <div class="px-3">
+            <div class="FormSection px-4 py-3">
                 <p><b>Auguma īpatnības</b></p>
 
                 <input type="checkbox" id="24" name="group8[]"/>
@@ -317,12 +266,9 @@
                 <label for="28">
                 <div class="choices">Cits variants</div>
                 </label>
-
             </div>
 
-            <div class="Line my-4"></div>
-
-            <div class="px-3">
+            <div class="FormSection px-4 py-3">
                 <p><b>Krāsa</b></p>
 
                 <input type="checkbox" name="group8[]"/>
@@ -344,14 +290,9 @@
                 <label>
                 <div class="CoolorF">&nbsp;</div>
                 </label>
-
-
-
             </div>
-            
-            <div class="Line my-4"></div>
 
-            <div class="px-3">
+            <div class="FormSection px-4 py-3">
                 <p><b>Aizpildiet laukus</b></p>
 
                 <input type="checkbox" id="24" name="group8[]"/>
@@ -368,7 +309,6 @@
                 <label for="26">
                 <div class="choices">E-pasts</div>
                 </label>
-
             </div>
 
             <div class="SelectFormHeder mt-5">
@@ -379,34 +319,13 @@
 
         </div>
 
-
-
-
-        <div class="SelectForm">
-
+        <div class="ImageHalf order-1 order-md-2">
+            <p>Images go here</p>
         </div>
 
-
-
-        
     </div>
-</div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="script.js"></script>
-
-<script>
-    $("input:checkbox").on('click', function() {
-    var $box = $(this);
-    if ($box.is(":checked")) {
-      var group = "input:checkbox[name='" + $box.attr("name") + "']";
-      $(group).prop("checked", false);
-      $box.prop("checked", true);
-    } else {
-      $box.prop("checked", false);
-    }
-  
-  });
-</script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
