cleaned up html and css

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 
-    <div class="PageContainer MaxWidth w-100 pt-4 d-flex flex-wrap justify-content-start">
-        <div class="FormHalf order-2 order-md-1">
+    <div class="PageContainer MaxWidth w-100 d-flex flex-wrap justify-content-start">
+        <div class="FormHalf mt-4 order-2 order-md-1">
             <div class="FormHeader">
                 <p class="px-4 py-4 mb-0">Izvēlieties vai aizpildiet norādītos laukus</p>
             </div>
@@ -21,12 +21,12 @@
 
                 <input type="checkbox" id="1" name="group1[]"/>
                 <label for="1">
-                <div class="choices">Pieguļošs</div>
+                    <div class="CheckboxDiv">Pieguļošs</div>
                 </label>
 
                 <input type="checkbox" id="2" name="group1[]"/>
                 <label for="2">
-                <div class="choices">Brīvs</div>
+                    <div class="CheckboxDiv">Brīvs</div>
                 </label>
             </div>
 
@@ -35,17 +35,17 @@
 
                 <input type="checkbox" id="3" name="group2[]"/>
                 <label for="3">
-                <div class="choices" onclick="check1()">Garās</div>
+                    <div class="CheckboxDiv" onclick="check1()">Garās</div>
                 </label>
 
                 <input type="checkbox" id="4" name="group2[]"/>
                 <label for="4">
-                <div class="choices" onclick="check2()">Pusgarās</div>
+                    <div class="CheckboxDiv" onclick="check2()">Pusgarās</div>
                 </label>
 
                 <input type="checkbox" id="5" name="group2[]"/>
                 <label for="5">
-                <div class="choices" onclick="check3()">Īsās</div>
+                    <div class="CheckboxDiv" onclick="check3()">Īsās</div>
                 </label>
             </div>
 
@@ -55,12 +55,12 @@
 
                     <input type="checkbox" id="41" name="group41[]"/>
                     <label for="41">
-                    <div class="choices" onclick="check4()">Ar manžetēm</div>
+                        <div class="CheckboxDiv" onclick="check4()">Ar manžetēm</div>
                     </label>
 
                     <input type="checkbox" id="42" name="group41[]"/>
                     <label for="42">
-                    <div class="choices" onclick="check5()">Klasiskas</div>
+                        <div class="CheckboxDiv" onclick="check5()">Klasiskas</div>
                     </label>
                 </div>
             </div>
@@ -71,12 +71,12 @@
 
                     <input type="checkbox" id="43" name="group33[]"/>
                     <label for="43">
-                    <div class="choices" onclick="check6()">Klasiskas</div>
+                        <div class="CheckboxDiv" onclick="check6()">Klasiskas</div>
                     </label>
 
                     <input type="checkbox" id="44" name="group33[]"/>
                     <label for="44">
-                    <div class="choices" onclick="check7()">Ar detaļu</div>
+                        <div class="CheckboxDiv" onclick="check7()">Ar detaļu</div>
                     </label>
                 </div>
             </div>
@@ -87,12 +87,12 @@
 
                     <input type="checkbox" id="45" name="group34[]"/>
                     <label for="45">
-                    <div class="choices" onclick="check6()">Klasiskas</div>
+                        <div class="CheckboxDiv" onclick="check6()">Klasiskas</div>
                     </label>
 
                     <input type="checkbox" id="46" name="group34[]"/>
                     <label for="46">
-                    <div class="choices" onclick="check7()">Ar pogājumu</div>
+                        <div class="CheckboxDiv" onclick="check7()">Ar pogājumu</div>
                     </label>
                 </div>
             </div>
@@ -103,12 +103,12 @@
 
                     <input type="checkbox" id="47" name="group34[]"/>
                     <label for="47">
-                    <div class="choices" onclick="check12()">Klasiskas</div>
+                        <div class="CheckboxDiv" onclick="check12()">Klasiskas</div>
                     </label>
 
                     <input type="checkbox" id="48" name="group34[]"/>
                     <label for="48">
-                    <div class="choices" onclick="check11()">Ar atloku</div>
+                        <div class="CheckboxDiv" onclick="check11()">Ar atloku</div>
                     </label>
                 </div>
             </div>
@@ -119,12 +119,12 @@
 
                     <input type="checkbox" id="49" name="group[]"/>
                     <label for="49">
-                    <div class="choices" >Ar pogu</div>
+                        <div class="CheckboxDiv" >Ar pogu</div>
                     </label>
 
                     <input type="checkbox" id="50" name="group[]"/>
                     <label for="50">
-                    <div class="choices" onclick="check11()">Bez pogas</div>
+                        <div class="CheckboxDiv" onclick="check11()">Bez pogas</div>
                     </label>
                 </div>
             </div>
@@ -134,17 +134,17 @@
 
                 <input type="checkbox" id="6" name="group3[]"/>
                 <label for="6">
-                <div class="choices">Ar apkakli</div>
+                    <div class="CheckboxDiv">Ar apkakli</div>
                 </label>
 
                 <input type="checkbox" id="7" name="group3[]"/>
                 <label for="7">
-                <div class="choices">Bez apkakles</div>
+                    <div class="CheckboxDiv">Bez apkakles</div>
                 </label>
 
                 <input type="checkbox" id="8" name="group3[]"/>
                 <label for="8">
-                <div class="choices">Ar izgriezumu</div>
+                    <div class="CheckboxDiv">Ar izgriezumu</div>
                 </label>
             </div>
 
@@ -153,12 +153,12 @@
 
                 <input type="checkbox" id="9" name="group4[]"/>
                 <label for="9">
-                <div class="choices">Taisna</div>
+                    <div class="CheckboxDiv">Taisna</div>
                 </label>
 
                 <input type="checkbox" id="10" name="group4[]"/>
                 <label for="10">
-                <div class="choices">Izliekta</div>
+                    <div class="CheckboxDiv">Izliekta</div>
                 </label>
             </div>
 
@@ -167,12 +167,12 @@
 
                 <input type="checkbox" id="11" name="group5[]"/>
                 <label for="11">
-                <div class="choices">Bez kabatām</div>
+                    <div class="CheckboxDiv">Bez kabatām</div>
                 </label>
 
                 <input type="checkbox" id="12" name="group5[]"/>
                 <label for="12">
-                <div class="choices">Ar kabatām</div>
+                    <div class="CheckboxDiv">Ar kabatām</div>
                 </label>
             </div>
 
@@ -181,42 +181,42 @@
 
                 <input type="checkbox" id="13" name="group6[]"/>
                 <label for="13">
-                <div class="choices">Xs</div>
+                    <div class="CheckboxDiv">Xs</div>
                 </label>
 
                 <input type="checkbox" id="14" name="group6[]"/>
                 <label for="14">
-                <div class="choices">S</div>
+                    <div class="CheckboxDiv">S</div>
                 </label>
 
                 <input type="checkbox" id="15" name="group6[]"/>
                 <label for="15">
-                <div class="choices">M</div>
+                <div class="CheckboxDiv">M</div>
                 </label>
 
                 <input type="checkbox" id="16" name="group6[]"/>
                 <label for="16">
-                <div class="choices">L</div>
+                    <div class="CheckboxDiv">L</div>
                 </label>
 
                 <input type="checkbox" id="17" name="group6[]"/>
                 <label for="17">
-                <div class="choices">XL</div>
+                    <div class="CheckboxDiv">XL</div>
                 </label>
 
                 <input type="checkbox" id="18" name="group6[]"/>
                 <label for="18">
-                <div class="choices">2XL</div>
+                    <div class="CheckboxDiv">2XL</div>
                 </label>
 
                 <input type="checkbox" id="19" name="group6[]"/>
                 <label for="19">
-                <div class="choices">3XL</div>
+                    <div class="CheckboxDiv">3XL</div>
                 </label>
 
                 <input type="checkbox" id="20" name="group6[]"/>
                 <label for="20">
-                <div class="choices">Cits</div>
+                    <div class="CheckboxDiv">Cits</div>
                 </label>
             </div>
 
@@ -225,17 +225,17 @@
 
                 <input type="checkbox" id="21" name="group7[]"/>
                 <label for="21">
-                <div class="choices">Krūšu apkārtmērs</div>
+                    <div class="CheckboxDiv">Krūšu apkārtmērs</div>
                 </label>
 
                 <input type="checkbox" id="22" name="group7[]"/>
                 <label for="22">
-                <div class="choices">Auguma garums</div>
+                    <div class="CheckboxDiv">Auguma garums</div>
                 </label>
 
                 <input type="checkbox" id="23" name="group7[]"/>
                 <label for="23">
-                <div class="choices">Kakla apkārtmērs</div>
+                    <div class="CheckboxDiv">Kakla apkārtmērs</div>
                 </label>
             </div>
 
@@ -244,27 +244,27 @@
 
                 <input type="checkbox" id="24" name="group8[]"/>
                 <label for="24">
-                <div class="choices">Muskuļota miesasbūve</div>
+                    <div class="CheckboxDiv">Muskuļota miesasbūve</div>
                 </label>
 
                 <input type="checkbox" id="25" name="group8[]"/>
                 <label for="25">
-                <div class="choices">"Alus vēderiņš"</div>
+                    <div class="CheckboxDiv">"Alus vēderiņš"</div>
                 </label>
 
                 <input type="checkbox" id="26" name="group8[]"/>
                 <label for="26">
-                <div class="choices">Sākumpusi stāja</div>
+                    <div class="CheckboxDiv">Sākumpusi stāja</div>
                 </label>
 
                 <input type="checkbox" id="27" name="group8[]"/>
                 <label for="27">
-                <div class="choices">Izliekta stāja</div>
+                    <div class="CheckboxDiv">Izliekta stāja</div>
                 </label>
 
                 <input type="checkbox" id="28" name="group8[]"/>
                 <label for="28">
-                <div class="choices">Cits variants</div>
+                    <div class="CheckboxDiv">Cits variants</div>
                 </label>
             </div>
 
@@ -273,22 +273,22 @@
 
                 <input type="checkbox" name="group8[]"/>
                 <label>
-                <div class="CoolorO">&nbsp;</div>
+                    <div class="ColorCheckboxDiv1">&nbsp;</div>
                 </label>
 
                 <input type="checkbox" name="group8[]"/>
                 <label>
-                <div class="CoolorS">&nbsp; </div>
+                    <div class="ColorCheckboxDiv2">&nbsp; </div>
                 </label>
 
                 <input type="checkbox" id="26" name="group8[]"/>
                 <label>
-                <div class="CoolorT">&nbsp;</div>
+                    <div class="ColorCheckboxDiv3">&nbsp;</div>
                 </label>
 
                 <input type="checkbox" name="group8[]"/>
                 <label>
-                <div class="CoolorF">&nbsp;</div>
+                    <div class="ColorCheckboxDiv4">&nbsp;</div>
                 </label>
             </div>
 
@@ -297,29 +297,29 @@
 
                 <input type="checkbox" id="24" name="group8[]"/>
                 <label for="24">
-                <div class="choices">Vārds</div>
+                <div class="CheckboxDiv">Vārds</div>
                 </label>
 
                 <input type="checkbox" id="25" name="group8[]"/>
                 <label for="25">
-                <div class="choices">"Telefona numurs"</div>
+                <div class="CheckboxDiv">"Telefona numurs"</div>
                 </label>
 
                 <input type="checkbox" id="26" name="group8[]"/>
                 <label for="26">
-                <div class="choices">E-pasts</div>
+                <div class="CheckboxDiv">E-pasts</div>
                 </label>
             </div>
 
-            <div class="SelectFormHeder mt-5">
-                <div class="d-flex justify-content-center px-3 py-4 mb-0">
+            <div class="FormHeader mt-5">
+                <div class="d-flex justify-content-center px-4 py-4 mb-0">
                     <button class="SendButton">Sūtīt</button>
                 </div>
             </div>
 
         </div>
 
-        <div class="ImageHalf order-1 order-md-2">
+        <div class="ImageHalf mt-4 order-1 order-md-2">
             <p>Images go here</p>
         </div>
 
