mostly working main js function, need html part

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             <!--pirmo izmanto lai paslēptu pārējās opcijas kuras var iegūt no tās pašas sākotnējās grupas-->
             <!--Pēc idejas visam jāsaiet vienā funkcijā-->
 
+            <!--Izdomā nosaukumus subgrupām-->
+
             <div class="FormSection FormGroup1 px-4 py-3">
                 <p><b>Piedurknes</b></p>
 
@@ -44,14 +46,14 @@
                     <div class="CheckboxDiv" onclick="Section2(1, 0, 2);">Garās</div>
                 </label>
 
-                <input type="checkbox" data-checked="false" data-target="FormGroup0" id="Group1_1" name="CheckboxGroup1"/>
+                <input type="checkbox" data-checked="false" data-target="FormGroup2" id="Group1_1" name="CheckboxGroup1"/>
                 <label for="Group1_1">
-                    <div class="CheckboxDiv" onclick="Section2();">Pusgarās</div>
+                    <div class="CheckboxDiv" onclick="Section2(1, 1, 2);">Pusgarās</div>
                 </label>
 
-                <input type="checkbox" data-checked="false" data-target="FormGroup0" id="Group1_2" name="CheckboxGroup1"/>
+                <input type="checkbox" data-checked="false" data-target="FormGroup2" id="Group1_2" name="CheckboxGroup1"/>
                 <label for="Group1_2">
-                    <div class="CheckboxDiv" onclick="Section2();">Īsās</div>
+                    <div class="CheckboxDiv" onclick="Section2(1, 2, 2);">Īsās</div>
                 </label>
             </div>
 
